--- a/css/styles.css
+++ b/css/styles.css
@@ -351,6 +351,7 @@ p {
     max-width: 768px;
   }
   .hero-title {
+    max-width: 496px;
     font-size: 56px;
     line-height: 1.07;
     margin: 0 auto 36px;
@@ -362,6 +363,7 @@ p {
     padding: 188px 0;
   }
   .hero-title {
+    max-width: 496px;
     font-size: 56px;
     line-height: 1.07;
     margin: 0 auto 48px;
@@ -1075,10 +1077,7 @@ p {
 .modal-menu {
   padding: 72px 24px 40px 16px;
 }
-.modal-button {
-}
-.modal-button-icon {
-}
+
 .modal-menu-nav {
   margin-bottom: 168px;
 }
@@ -1117,19 +1116,15 @@ p {
   letter-spacing: 0.02em;
   color: #434455;
 }
-.address-link {
-}
+
 .modal-menu-social {
   display: flex;
   gap: 40px;
 }
-.social-item {
-}
+
 .modal-menu-social .social-link {
   width: 40px;
   height: 40px;
-}
-.social-icon {
 }
 
 @media only screen and (min-width: 768px) {
